# exowirc

./: .gitignore  .readthedocs.yaml  CHANGELOG.txt  LICENSE  MANIFEST.in  README.md  README.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
exowirc/: __init__.py  calib_utils.py  fit_utils.py  io_utils.py  photo_utils.py  plot_utils.py
observing/: observing.md
sample_scripts/: helium_reduction.py  jband_transit_reduction.py  k_band_eclipse_reduction.py  ngts5.py  w107.py
source/: api.rst  conf.py  exowirc.rst  helium-tutorial.rst  index.rst  installation.rst  jband-tutorial.rst  kband-tutorial.rst  modules.rst  quickstart.rst  testing.rst  tutorial.rst
