[metadata]
name = exowirc 
version = 0.0.1
author = Shreyas Vissapragada
author_email = svissapr@caltech.edu
description = tools for Palomar/WIRC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/astroshrey/exowirc
project_urls =
    Bug Tracker = https://github.com/astroshrey/exowirc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
	numpy>=1.18.4
	scipy>=1.4.1
	astropy>=4.2
	matplotlib>=3.4.1
	opencv-python>=3.4.2.17
	exoplanet>=0.5
	pymc3-ext>=0.1.0
	lightkurve>=2.0.9
	arviz>=0.11.2
	photutils>=0.7.1
	corner>=2.2.1


[options.packages.find]
where = src
